Switch latex template to blind submission

--- a/submission-template/pact22/latex/pact22-template.tex
+++ b/submission-template/pact22/latex/pact22-template.tex
@@ -1,4 +1,4 @@
-\documentclass[sigconf]{acmart}
+\documentclass[sigconf,anonymous=true]{acmart}
 
 %%
 %% \BibTeX command to typeset BibTeX logo in the docs
