Add 'review' to submission template options

--- a/submission-template/pact22/latex/pact22-template.tex
+++ b/submission-template/pact22/latex/pact22-template.tex
@@ -1,4 +1,4 @@
-\documentclass[sigconf,anonymous=true]{acmart}
+\documentclass[sigconf,anonymous,review]{acmart}
 
 %%
 %% \BibTeX command to typeset BibTeX logo in the docs
